--- a/package.json
+++ b/package.json
@@ -13,15 +13,15 @@
 		"react-scripts": "4.0.3",
 		"react-scrollmagic": "^2.3.0",
 		"react-vanilla-tilt": "^1.0.0",
+		"styled-components": "^5.3.3",
 		"web-vitals": "^1.1.2"
 	},
 	"scripts": {
-		
-		"start": "set PORT=3008 && react-scripts start",
+		"start": "set PORT=3005 && react-scripts start",
 		"build": "react-scripts build",
 		"test": "react-scripts test",
 		"eject": "react-scripts eject"
-	}, 
+	},
 	"eslintConfig": {
 		"extends": [
 			"react-app",
